homeautomation/zwavejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: zwavejs
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"zwavejs:latest","namespace":"homeautomation"},"fieldPath":"spec.template.spec.containers[?(@.name==\"zwavejs-server\")]"}]'
  name: zwavejs
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: zwavejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: zwavejs
    spec:
      containers:
        - env:
            - name: NO_LOG_COLORS
              value: "true"
          image: zwavejs:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Accept
                  value: text/plain
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 24
            httpGet:
              httpHeaders:
                - name: Accept
                  value: text/plain
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          name: zwavejs-server
          ports:
            - containerPort: 8091
              name: http
              protocol: TCP
            - containerPort: 3000
              name: zwajvejs-ws
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 10m
            limits:
              memory: 256Mi
              cpu: 100m
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            runAsUser: 0
          volumeMounts:
            - mountPath: /usr/src/app/store
              name: zwave-config
            - mountPath: /dev/ttyUSB0
              name: zwave-stick
      dnsPolicy: ClusterFirst
      nodeSelector:
        feature.node.kubernetes.io/usb-10c4_ea60.present: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: zwave-run-user
      terminationGracePeriodSeconds: 30
      volumes:
        - name: zwave-config
          persistentVolumeClaim:
            claimName: zwavejs-config
        - hostPath:
            path: /dev/serial/by-id/usb-Silicon_Labs_Zooz_ZST10_700_Z-Wave_Stick_7c06e8acc160ec11baaa387625bfaa52-if00-port0
          name: zwave-stick
status: {}
