homeautomation/zwavejs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: zwavejs
spec:
  host: zwavejs-homeautomation.apps.homelab.csfreak.com
  port:
    targetPort: zwavejs-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: zwavejs
    weight: 100
  wildcardPolicy: None
